[gd_scene load_steps=3 format=3 uid="uid://byfcnid0wfesr"]

[ext_resource type="PackedScene" uid="uid://b4udisycublkt" path="res://scenes/MessageWindowGUI.tscn" id="1_nbokd"]
[ext_resource type="Script" path="res://scripts/scenes/MessageWindow.gd" id="1_xjr6c"]

[node name="MessageWindow" type="Window"]
initial_position = 2
size = Vector2i(539, 393)
wrap_controls = true
exclusive = true
unresizable = true
borderless = true
popup_window = true
script = ExtResource("1_xjr6c")

[node name="MessageWindowGUI" parent="." instance=ExtResource("1_nbokd")]

[connection signal="ok_button_clicked" from="MessageWindowGUI" to="." method="_on_message_window_gui_ok_button_clicked"]
